crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_js_worker__tests__Memory_full_replay_2.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "sanitize_json(&serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "AppendStubResponse": {
        "events": {
          "execution_id": "E_<REDACTED>",
          "version": 1,
          "batch": [
            {
              "created_at": "<TIMESTAMP>",
              "event": {
                "finished": {
                  "retval": {
                    "ok": {
                      "type": "string",
                      "value": "hello"
                    }
                  },
                  "http_client_traces": null
                }
              }
            }
          ]
        },
        "response": {
          "parent_execution_id": "E_<REDACTED>",
          "created_at": "<TIMESTAMP>",
          "join_set_id": "g:1",
          "child_execution_id": "E_<REDACTED>",
          "finished_version": 1,
          "result": {
            "ok": {
              "type": "string",
              "value": "hello"
            }
          }
        },
        "current_time": "<TIMESTAMP>"
      }
    }
  ]
}
