crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_js_worker__tests__Memory_full_replay_3.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "sanitize_json(&serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "AppendBatch": {
        "current_time": "<TIMESTAMP>",
        "batch": [
          {
            "created_at": "<TIMESTAMP>",
            "event": {
              "history_event": {
                "event": {
                  "type": "stub",
                  "target_execution_id": "E_<REDACTED>",
                  "retval_hash": "011f9f1089426c4e2d1d6c761441181fba8e690f2baeccde7036a92c7d49d6b0e1",
                  "result": {
                    "Ok": null
                  }
                }
              }
            }
          }
        ],
        "execution_id": "E_<REDACTED>",
        "version": 4
      }
    },
    {
      "Append": {
        "execution_id": "E_<REDACTED>",
        "version": 5,
        "req": {
          "created_at": "<TIMESTAMP>",
          "event": {
            "history_event": {
              "event": {
                "type": "join_next",
                "join_set_id": "g:1",
                "run_expires_at": "<TIMESTAMP>",
                "requested_ffqn": null,
                "closing": false
              }
            }
          }
        }
      }
    },
    {
      "Append": {
        "execution_id": "E_<REDACTED>",
        "version": 6,
        "req": {
          "created_at": "<TIMESTAMP>",
          "event": {
            "finished": {
              "retval": {
                "ok": {
                  "type": "result<string, string>",
                  "value": {
                    "ok": "\"hello\""
                  }
                }
              },
              "http_client_traces": null
            }
          }
        }
      }
    }
  ]
}
