crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_js_worker__tests__Memory_submit_cancel_full_log_2.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "ExecutionLogSanitized::from(log)"
---
{
  "execution_id": "E_0000000000000000000000000A",
  "events": [
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "created": {
          "ffqn": "test:pkg/ifc.submit-and-return",
          "params": [
            []
          ],
          "parent": null,
          "scheduled_at": "1970-01-01T00:00:00Z",
          "component_id": {
            "component_type": "workflow",
            "name": "test_js_workflow",
            "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "deployment_id": "Dep_00000000000000000000000000",
          "metadata": {},
          "scheduled_by": null
        }
      },
      "version": 0
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": "paused",
      "version": 1
    },
    {
      "created_at": "1970-01-01T00:00:00.200Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_create",
            "join_set_id": "g:1"
          }
        }
      },
      "version": 2
    },
    {
      "created_at": "1970-01-01T00:00:00.200Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "g:1",
            "request": {
              "type": "child_execution_request",
              "child_execution_id": "E_0000000000000000000000000A.g:1_1",
              "target_ffqn": "testing:fibo/fibo.fibo",
              "params": [
                10
              ],
              "result": {
                "Ok": null
              }
            }
          }
        }
      },
      "version": 3
    },
    {
      "created_at": "1970-01-01T00:00:00.400Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next",
            "join_set_id": "g:1",
            "run_expires_at": "1970-01-01T00:00:00.400Z",
            "requested_ffqn": null,
            "closing": true
          }
        }
      },
      "version": 4
    }
  ],
  "responses": [
    {
      "created_at": "1970-01-01T00:00:00.400Z",
      "event": {
        "join_set_id": "g:1",
        "event": {
          "type": "child_execution_finished",
          "child_execution_id": "E_0000000000000000000000000A.g:1_1",
          "finished_version": 1,
          "result": {
            "execution_error": {
              "kind": "cancelled"
            }
          }
        }
      }
    }
  ],
  "next_version": 5,
  "pending_state": {
    "status": "pending_at",
    "scheduled_at": "1970-01-01T00:00:00.400Z",
    "last_lock": null
  },
  "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
}
