crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_js_worker__tests__Memory_submit_cancel_trimmed_to_1_replay_3.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "redact_component_digest(serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "Append": {
        "execution_id": "E_0000000000000000000000000B",
        "version": 4,
        "req": {
          "created_at": "1970-01-01T00:00:00.500Z",
          "event": {
            "history_event": {
              "event": {
                "type": "join_next",
                "join_set_id": "g:1",
                "run_expires_at": "1970-01-01T00:00:00.500Z",
                "requested_ffqn": null,
                "closing": true
              }
            }
          }
        }
      }
    }
  ]
}
